@@ -41,6 +41,14 @@ public:
     {
     }
 
+    void AcceptParameters(GameActionParameterVisitor & visitor) override
+    {
+        visitor.Visit(_loc);
+        visitor.Visit("object", _type);
+        visitor.Visit("direction", _direction);
+        visitor.Visit("slope", _slope);
+    }
+
     uint16_t GetActionFlags() const override
     {
         return GameAction::GetActionFlags();
