@@ -36,6 +36,12 @@ public:
     {
     }
 
+    void AcceptParameters(GameActionParameterVisitor & visitor) override
+    {
+        visitor.Visit(_loc);
+        visitor.Visit("object", _pathItemType);
+    }
+
     uint16_t GetActionFlags() const override
     {
         return GameAction::GetActionFlags();
