@@ -38,6 +38,12 @@ public:
     {
     }
 
+    void AcceptParameters(GameActionParameterVisitor & visitor) override
+    {
+        visitor.Visit(_loc);
+        visitor.Visit("tileIndex", _tileIndex);
+    }
+
     uint16_t GetActionFlags() const override
     {
         return GameAction::GetActionFlags();
