@@ -40,6 +40,13 @@ public:
     {
     }
 
+    void AcceptParameters(GameActionParameterVisitor & visitor) override
+    {
+        visitor.Visit(_loc);
+        visitor.Visit("object", _sceneryType);
+        visitor.Visit("quadrant", _quadrant);
+    }
+
     uint16_t GetActionFlags() const override
     {
         return GameAction::GetActionFlags();
