@@ -84,6 +84,23 @@ public:
         }
     }
 
+    void AcceptParameters(GameActionParameterVisitor & visitor) override
+    {
+        visitor.Visit(_loc);
+        visitor.Visit("object", _wallType);
+        visitor.Visit("edge", _edge);
+        visitor.Visit("primaryColour", _primaryColour);
+        visitor.Visit("secondaryColour", _secondaryColour);
+        visitor.Visit("tertiaryColour", _tertiaryColour);
+        rct_scenery_entry* sceneryEntry = get_large_scenery_entry(_wallType);
+        if (sceneryEntry != nullptr)
+        {
+            if (sceneryEntry->large_scenery.scrolling_mode != SCROLLING_MODE_NONE)
+            {
+                _bannerId = create_new_banner(0);
+            }
+        }
+    }
     uint16_t GetActionFlags() const override
     {
         return GameAction::GetActionFlags();
