@@ -42,7 +42,7 @@
 using namespace OpenRCT2;
 using namespace OpenRCT2::Scripting;
 
-static constexpr int32_t OPENRCT2_PLUGIN_API_VERSION = 5;
+static constexpr int32_t OPENRCT2_PLUGIN_API_VERSION = 6;
 
 struct ExpressionStringifier final
 {
